Bug 318793 - contact list crashes when closing the settings dialog
Summary: contact list crashes when closing the settings dialog
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
: 313955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-24 07:31 UTC by Andreas Roth
Modified: 2013-05-02 16:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Roth 2013-04-24 07:31:53 UTC
Application: ktp-contactlist (0.6.1)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.8.0-19-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:
- i removed an old Google Talk account
- added a new Google talk account
- closed the settings dialog
- crash

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff700864840 (LWP 5900))]

Thread 4 (Thread 0x7ff6eae1f700 (LWP 5901)):
#0  0x00007ff6fc713b0d in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ff6f9c0f6cf in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff6f9bd0d3c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff6f9bd1175 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff6f9bd1304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff6eae26a1d in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#6  0x00007ff6f9bf4eb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007ff6f88cff8e in start_thread (arg=0x7ff6eae1f700) at pthread_create.c:311
#8  0x00007ff6fc721e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7ff6ea61e700 (LWP 5902)):
#0  0x00007ff6f88d307f in __pthread_mutex_unlock_usercnt (mutex=0x7ff6e400fac0, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  0x00007ff6f9c105f1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff6f9bd0b39 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff6f9bd114c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff6f9bd16ba in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff6f96a84f6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007ff6f9bf4eb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007ff6f88cff8e in start_thread (arg=0x7ff6ea61e700) at pthread_create.c:311
#8  0x00007ff6fc721e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7ff6e969f700 (LWP 5903)):
#0  0x00007ff6fc7153cd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ff6f9bd11dc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff6f9bd1304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff6fe4a7036 in QEventDispatcherGlib::processEvents (this=0x7ff6e00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007ff6fe47738f in QEventLoop::processEvents (this=this@entry=0x7ff6e969ed10, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ff6fe477618 in QEventLoop::exec (this=this@entry=0x7ff6e969ed10, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007ff6fe379410 in QThread::exec (this=this@entry=0xcccff0) at thread/qthread.cpp:542
#7  0x00007ff6fe458edf in QInotifyFileSystemWatcherEngine::run (this=0xcccff0) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007ff6fe37bbec in QThreadPrivate::start (arg=0xcccff0) at thread/qthread_unix.cpp:338
#9  0x00007ff6f88cff8e in start_thread (arg=0x7ff6e969f700) at pthread_create.c:311
#10 0x00007ff6fc721e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7ff700864840 (LWP 5900)):
[KCrash Handler]
#6  0x00007ff6fc65f037 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007ff6fc662698 in __GI_abort () at abort.c:90
#8  0x00007ff6fc69c5ab in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7ff6fc7af860 "*** Error in `%s': %s: 0x%s ***\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:199
#9  0x00007ff6fc6a8a46 in malloc_printerr (ptr=0x7fff806dfdd0, str=0x7ff6fc7af990 "double free or corruption (out)", action=3) at malloc.c:4902
#10 _int_free (av=<optimized out>, p=0x7fff806dfdc0, have_lock=0) at malloc.c:3758
#11 0x00007ff6fe48b232 in QObjectPrivate::deleteChildren (this=this@entry=0xf79640) at kernel/qobject.cpp:1907
#12 0x00007ff6fd1296dc in QWidget::~QWidget (this=0xcced00, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1681
#13 0x00007ff6ff5affe8 in KCModule::~KCModule (this=0xcced00, __in_chrg=<optimized out>) at ../../kdeui/widgets/kcmodule.cpp:193
#14 0x00007ff6e8a2c909 in ?? () from /usr/lib/kde4/kcm_ktp_accounts.so
#15 0x00007ff6fec371b4 in KCModuleProxy::deleteClient (this=<optimized out>) at ../../kutils/kcmoduleproxy.cpp:219
#16 0x00007ff6fec360bc in KCMultiDialogPrivate::_k_dialogClosed (this=0xf900f0) at ../../kutils/kcmultidialog.cpp:201
#17 0x00007ff6fe48d0ef in QMetaObject::activate (sender=0xf89ca0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3539
#18 0x00007ff6fd128c87 in QWidget::event (this=0xf89ca0, event=0x7fff806dcd70) at kernel/qwidget.cpp:8597
#19 0x00007ff6fd0db8ec in QApplicationPrivate::notify_helper (this=this@entry=0xbd9ef0, receiver=receiver@entry=0xf89ca0, e=e@entry=0x7fff806dcd70) at kernel/qapplication.cpp:4567
#20 0x00007ff6fd0de25b in QApplication::notify (this=this@entry=0x7fff806e4530, receiver=receiver@entry=0xf89ca0, e=e@entry=0x7fff806dcd70) at kernel/qapplication.cpp:4428
#21 0x00007ff6ff523af6 in KApplication::notify (this=0x7fff806e4530, receiver=0xf89ca0, event=0x7fff806dcd70) at ../../kdeui/kernel/kapplication.cpp:311
#22 0x00007ff6fe47863e in QCoreApplication::notifyInternal (this=0x7fff806e4530, receiver=receiver@entry=0xf89ca0, event=event@entry=0x7fff806dcd70) at kernel/qcoreapplication.cpp:946
#23 0x00007ff6fd129cdb in sendEvent (event=0x7fff806dcd70, receiver=0xf89ca0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#24 QWidgetPrivate::hide_helper (this=this@entry=0xf90ca0) at kernel/qwidget.cpp:7641
#25 0x00007ff6fd12c488 in QWidget::setVisible (this=this@entry=0xf89ca0, visible=visible@entry=false) at kernel/qwidget.cpp:7814
#26 0x00007ff6fd595b43 in QDialog::setVisible (this=0xf89ca0, visible=<optimized out>) at dialogs/qdialog.cpp:793
#27 0x00007ff6fd594ec4 in hide (this=0xf89ca0) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:498
#28 QDialog::done (this=0xf89ca0, r=1) at dialogs/qdialog.cpp:591
#29 0x00007ff6fe48d0ef in QMetaObject::activate (sender=sender@entry=0xf89ca0, m=m@entry=0x7ff6ff918320 <KDialog::staticMetaObject>, local_signal_index=local_signal_index@entry=9, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#30 0x00007ff6ff480113 in KDialog::okClicked (this=this@entry=0xf89ca0) at ./kdialog.moc:272
#31 0x00007ff6ff4807c8 in KDialog::slotButtonClicked (this=0xf89ca0, button=4) at ../../kdeui/dialogs/kdialog.cpp:884
#32 0x00007ff6ff482d44 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./kdialog.moc:167
#33 KDialog::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./kdialog.moc:127
#34 0x00007ff6fe48d0ef in QMetaObject::activate (sender=sender@entry=0xf90180, m=m@entry=0x7ff6fe7d0c60 <QSignalMapper::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff806dd170) at kernel/qobject.cpp:3539
#35 0x00007ff6fe4940fe in QSignalMapper::mapped (this=this@entry=0xf90180, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:115
#36 0x00007ff6fe494305 in QSignalMapper::map (this=0xf90180, sender=0xf94480) at kernel/qsignalmapper.cpp:266
#37 0x00007ff6fe48d0ef in QMetaObject::activate (sender=sender@entry=0xf94480, m=m@entry=0x7ff6fdba6ca0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff806dd300) at kernel/qobject.cpp:3539
#38 0x00007ff6fd746c82 in QAbstractButton::clicked (this=this@entry=0xf94480, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#39 0x00007ff6fd49a23e in QAbstractButtonPrivate::emitClicked (this=this@entry=0xf947d0) at widgets/qabstractbutton.cpp:548
#40 0x00007ff6fd49aa30 in QAbstractButtonPrivate::click (this=this@entry=0xf947d0) at widgets/qabstractbutton.cpp:541
#41 0x00007ff6fd49ac9c in QAbstractButton::mouseReleaseEvent (this=0xf94480, e=0x7fff806ddba0) at widgets/qabstractbutton.cpp:1123
#42 0x00007ff6fd128a89 in QWidget::event (this=0xf94480, event=0x7fff806ddba0) at kernel/qwidget.cpp:8375
#43 0x00007ff6fd0db8ec in QApplicationPrivate::notify_helper (this=this@entry=0xbd9ef0, receiver=receiver@entry=0xf94480, e=e@entry=0x7fff806ddba0) at kernel/qapplication.cpp:4567
#44 0x00007ff6fd0dea33 in QApplication::notify (this=this@entry=0x7fff806e4530, receiver=receiver@entry=0xf94480, e=e@entry=0x7fff806ddba0) at kernel/qapplication.cpp:4110
#45 0x00007ff6ff523af6 in KApplication::notify (this=0x7fff806e4530, receiver=0xf94480, event=0x7fff806ddba0) at ../../kdeui/kernel/kapplication.cpp:311
#46 0x00007ff6fe47863e in QCoreApplication::notifyInternal (this=0x7fff806e4530, receiver=receiver@entry=0xf94480, event=event@entry=0x7fff806ddba0) at kernel/qcoreapplication.cpp:946
#47 0x00007ff6fd0e1933 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#48 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xf94480, event=event@entry=0x7fff806ddba0, alienWidget=alienWidget@entry=0xf94480, nativeWidget=nativeWidget@entry=0xf8ced0, buttonDown=buttonDown@entry=0x7ff6fdbb9308 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#49 0x00007ff6fd156ec4 in QETWidget::translateMouseEvent (this=this@entry=0xf8ced0, event=event@entry=0x7fff806de320) at kernel/qapplication_x11.cpp:4631
#50 0x00007ff6fd155ef1 in QApplication::x11ProcessEvent (this=0x7fff806e4530, event=event@entry=0x7fff806de320) at kernel/qapplication_x11.cpp:3746
#51 0x00007ff6fd1810b2 in x11EventSourceDispatch (s=0xbd85f0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#52 0x00007ff6f9bd0f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#53 0x00007ff6f9bd1248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#54 0x00007ff6f9bd1304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#55 0x00007ff6fe4a7036 in QEventDispatcherGlib::processEvents (this=0xb18d50, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#56 0x00007ff6fd1811ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#57 0x00007ff6fe47738f in QEventLoop::processEvents (this=this@entry=0x7fff806de700, flags=...) at kernel/qeventloop.cpp:149
#58 0x00007ff6fe477618 in QEventLoop::exec (this=this@entry=0x7fff806de700, flags=...) at kernel/qeventloop.cpp:204
#59 0x00007ff6fd5961c8 in QDialog::exec (this=0x7fff806de7a0) at dialogs/qdialog.cpp:554
#60 0x00007ff6e8a2efa5 in ?? () from /usr/lib/kde4/kcm_ktp_accounts.so
#61 0x00007ff6fe48d0ef in QMetaObject::activate (sender=sender@entry=0xf81500, m=m@entry=0x7ff6fdba6ca0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff806de930) at kernel/qobject.cpp:3539
#62 0x00007ff6fd746c82 in QAbstractButton::clicked (this=this@entry=0xf81500, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#63 0x00007ff6fd49a23e in QAbstractButtonPrivate::emitClicked (this=this@entry=0xf81540) at widgets/qabstractbutton.cpp:548
#64 0x00007ff6fd49aa30 in QAbstractButtonPrivate::click (this=this@entry=0xf81540) at widgets/qabstractbutton.cpp:541
#65 0x00007ff6fd49ac9c in QAbstractButton::mouseReleaseEvent (this=0xf81500, e=0x7fff806df1d0) at widgets/qabstractbutton.cpp:1123
#66 0x00007ff6fd128a89 in QWidget::event (this=0xf81500, event=0x7fff806df1d0) at kernel/qwidget.cpp:8375
#67 0x00007ff6fd0db8ec in QApplicationPrivate::notify_helper (this=this@entry=0xbd9ef0, receiver=receiver@entry=0xf81500, e=e@entry=0x7fff806df1d0) at kernel/qapplication.cpp:4567
#68 0x00007ff6fd0dea33 in QApplication::notify (this=this@entry=0x7fff806e4530, receiver=receiver@entry=0xf81500, e=e@entry=0x7fff806df1d0) at kernel/qapplication.cpp:4110
#69 0x00007ff6ff523af6 in KApplication::notify (this=0x7fff806e4530, receiver=0xf81500, event=0x7fff806df1d0) at ../../kdeui/kernel/kapplication.cpp:311
#70 0x00007ff6fe47863e in QCoreApplication::notifyInternal (this=0x7fff806e4530, receiver=receiver@entry=0xf81500, event=event@entry=0x7fff806df1d0) at kernel/qcoreapplication.cpp:946
#71 0x00007ff6fd0e1933 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#72 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xf81500, event=event@entry=0x7fff806df1d0, alienWidget=alienWidget@entry=0x0, nativeWidget=nativeWidget@entry=0xf81500, buttonDown=buttonDown@entry=0x7ff6fdbb9308 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#73 0x00007ff6fd156ec4 in QETWidget::translateMouseEvent (this=this@entry=0xf81500, event=event@entry=0x7fff806df950) at kernel/qapplication_x11.cpp:4631
#74 0x00007ff6fd155ef1 in QApplication::x11ProcessEvent (this=0x7fff806e4530, event=event@entry=0x7fff806df950) at kernel/qapplication_x11.cpp:3746
#75 0x00007ff6fd1810b2 in x11EventSourceDispatch (s=0xbd85f0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#76 0x00007ff6f9bd0f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#77 0x00007ff6f9bd1248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#78 0x00007ff6f9bd1304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#79 0x00007ff6fe4a7036 in QEventDispatcherGlib::processEvents (this=0xb18d50, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#80 0x00007ff6fd1811ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#81 0x00007ff6fe47738f in QEventLoop::processEvents (this=this@entry=0x7fff806dfd30, flags=...) at kernel/qeventloop.cpp:149
#82 0x00007ff6fe477618 in QEventLoop::exec (this=this@entry=0x7fff806dfd30, flags=...) at kernel/qeventloop.cpp:204
#83 0x00007ff6fd5961c8 in QDialog::exec (this=0x7fff806dfdd0) at dialogs/qdialog.cpp:554
#84 0x00007ff6e8a2efa5 in ?? () from /usr/lib/kde4/kcm_ktp_accounts.so
#85 0x00007ff6fe48d0ef in QMetaObject::activate (sender=sender@entry=0xf81500, m=m@entry=0x7ff6fdba6ca0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff806dff60) at kernel/qobject.cpp:3539
#86 0x00007ff6fd746c82 in QAbstractButton::clicked (this=this@entry=0xf81500, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#87 0x00007ff6fd49a23e in QAbstractButtonPrivate::emitClicked (this=this@entry=0xf81540) at widgets/qabstractbutton.cpp:548
#88 0x00007ff6fd49aa30 in QAbstractButtonPrivate::click (this=this@entry=0xf81540) at widgets/qabstractbutton.cpp:541
#89 0x00007ff6fd49ac9c in QAbstractButton::mouseReleaseEvent (this=0xf81500, e=0x7fff806e0800) at widgets/qabstractbutton.cpp:1123
#90 0x00007ff6fd128a89 in QWidget::event (this=0xf81500, event=0x7fff806e0800) at kernel/qwidget.cpp:8375
#91 0x00007ff6fd0db8ec in QApplicationPrivate::notify_helper (this=this@entry=0xbd9ef0, receiver=receiver@entry=0xf81500, e=e@entry=0x7fff806e0800) at kernel/qapplication.cpp:4567
#92 0x00007ff6fd0dea33 in QApplication::notify (this=this@entry=0x7fff806e4530, receiver=receiver@entry=0xf81500, e=e@entry=0x7fff806e0800) at kernel/qapplication.cpp:4110
#93 0x00007ff6ff523af6 in KApplication::notify (this=0x7fff806e4530, receiver=0xf81500, event=0x7fff806e0800) at ../../kdeui/kernel/kapplication.cpp:311
#94 0x00007ff6fe47863e in QCoreApplication::notifyInternal (this=0x7fff806e4530, receiver=receiver@entry=0xf81500, event=event@entry=0x7fff806e0800) at kernel/qcoreapplication.cpp:946
#95 0x00007ff6fd0e1933 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#96 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xf81500, event=event@entry=0x7fff806e0800, alienWidget=alienWidget@entry=0xf81500, nativeWidget=nativeWidget@entry=0xf89ca0, buttonDown=buttonDown@entry=0x7ff6fdbb9308 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#97 0x00007ff6fd156ec4 in QETWidget::translateMouseEvent (this=this@entry=0xf89ca0, event=event@entry=0x7fff806e0f80) at kernel/qapplication_x11.cpp:4631
#98 0x00007ff6fd155ef1 in QApplication::x11ProcessEvent (this=0x7fff806e4530, event=event@entry=0x7fff806e0f80) at kernel/qapplication_x11.cpp:3746
#99 0x00007ff6fd1810b2 in x11EventSourceDispatch (s=0xbd85f0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#100 0x00007ff6f9bd0f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#101 0x00007ff6f9bd1248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#102 0x00007ff6f9bd1304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#103 0x00007ff6fe4a7036 in QEventDispatcherGlib::processEvents (this=0xb18d50, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#104 0x00007ff6fd1811ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#105 0x00007ff6fe47738f in QEventLoop::processEvents (this=this@entry=0x7fff806e1360, flags=...) at kernel/qeventloop.cpp:149
#106 0x00007ff6fe477618 in QEventLoop::exec (this=this@entry=0x7fff806e1360, flags=...) at kernel/qeventloop.cpp:204
#107 0x00007ff6fd5961c8 in QDialog::exec (this=0xf89ca0) at dialogs/qdialog.cpp:554
#108 0x000000000041d770 in _start ()

Possible duplicates by query: bug 314055, bug 311589, bug 309216, bug 307561, bug 307512.

Reported using DrKonqi
Comment 1 Sven Brauch 2013-05-02 16:24:14 UTC
Can the bug be reproduced?

Could you maybe run the application through valgrind to get more detailled information? It's very unclear how this can happen, and nobody was able to reproduce it so far. The valgrind logs are clean, too.
Comment 2 David Edmundson 2013-05-02 16:39:57 UTC
*** Bug 313955 has been marked as a duplicate of this bug. ***
Comment 3 David Edmundson 2013-05-02 16:47:10 UTC
[17:34] <d_ed> so, to reproduce:
[17:34] <d_ed> close the wallet
[17:34] <d_ed> (make sure it has a password)
[17:34] <d_ed> open system settings
[17:34] <d_ed> click edit
[17:35] <d_ed> ignore the wallet prompt
[17:35] <d_ed> and click close
[17:35] <d_ed> our app gets killed (from the inner event loop) 
exec finishes and we're in a broken stack.. double free.  BOOM
Comment 4 David Edmundson 2013-05-02 16:48:57 UTC
Git commit 791c93c5197fcf7c9047aa2a9b4932f991a7587c by David Edmundson.
Committed on 02/05/2013 at 18:46.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Wrap EditAccountDialog in a QWeakPointer
FIXED-IN: 0.6.2
Reviewed-By: Sven Brauch

M  +3    -2    src/kcm-telepathy-accounts.cpp

http://commits.kde.org/telepathy-accounts-kcm/791c93c5197fcf7c9047aa2a9b4932f991a7587c