Wrap EditAccountDialog in a QWeakPointer

BUG: 318793
FIXED-IN: 0.6.2
Reviewed-By: Sven Brauch